added styles of hero

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,14 +10,12 @@ a {
 }
 .header {
     display: flex;
-    /* width: 100%; */
     background-color: #000;
     color: #fff;
     justify-content: space-between;
     align-items: center;
     font-size: 2.5rem;
     font-weight: 600;
-    color: #fdfdfe;
     padding: 30px 100px;
 }
 .header-title {
@@ -35,8 +33,6 @@ a {
         0px 0px 20px #243fc5;
 }
 .container {
-    /* display: flex;
-    flex-wrap: wrap; */
     margin: 30px 100px;
     padding: 20px;
     background-color: #fff;
@@ -74,15 +70,37 @@ a {
     color: #f01f18;
     text-decoration: underline;
 }
+.hero-title {
+    font-weight: 600;
+}
+
 @media (max-width: 946px) {
     .header {
         font-size: 2rem;
         padding: 15px 50px;
     }
+    .container {
+        margin: 15px 50px;
+    }
+    .card__title {
+        font-size: 3rem;
+    }
+    .card-container__images {
+        justify-content: space-evenly;
+    }
+    .hero-image {
+        width: 100%;
+    }
 }
 @media (max-width: 768px) {
     .header {
         font-size: 1.6rem;
+    }
+    .card__desc {
+        font-size: 1.7rem;
+    }
+    .card__title {
+        font-size: 2.6rem;
     }
 }
 @media (max-width: 545px) {
@@ -90,9 +108,22 @@ a {
         font-size: 1.4rem;
         padding: 15px 20px;
     }
+    .card__desc {
+        font-size: 1.5rem;
+    }
+    .container {
+        margin: 15px 20px;
+    }
+    .card__title {
+        font-size: 2.4rem;
+    }
 }
 @media (max-width: 440px) {
-    .header {
+    .header,
+    .card__desc {
         font-size: 1rem;
+    }
+    .card__title {
+        font-size: 2rem;
     }
 }
